; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_bflt.c_entries.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_bflt.c_entries.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64 }
%struct.r_bin_bflt_obj = type { i32 }

@free = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_5__*)* @entries to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @entries(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca %struct.r_bin_bflt_obj*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to %struct.r_bin_bflt_obj*
  store %struct.r_bin_bflt_obj* %12, %struct.r_bin_bflt_obj** %4, align 8
  %13 = load i32, i32* @free, align 4
  %14 = call i32* @r_list_newf(i32 %13)
  store i32* %14, i32** %5, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %30

17:                                               ; preds = %1
  %18 = load %struct.r_bin_bflt_obj*, %struct.r_bin_bflt_obj** %4, align 8
  %19 = call i32* @r_bflt_get_entry(%struct.r_bin_bflt_obj* %18)
  store i32* %19, i32** %6, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %25, label %22

22:                                               ; preds = %17
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @r_list_free(i32* %23)
  store i32* null, i32** %2, align 8
  br label %30

25:                                               ; preds = %17
  %26 = load i32*, i32** %5, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = call i32 @r_list_append(i32* %26, i32* %27)
  %29 = load i32*, i32** %5, align 8
  store i32* %29, i32** %2, align 8
  br label %30

30:                                               ; preds = %25, %22, %16
  %31 = load i32*, i32** %2, align 8
  ret i32* %31
}

declare dso_local i32* @r_list_newf(i32) #1

declare dso_local i32* @r_bflt_get_entry(%struct.r_bin_bflt_obj*) #1

declare dso_local i32 @r_list_free(i32*) #1

declare dso_local i32 @r_list_append(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
